# TBT_Rewrite

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
django_project/: settings.py  urls.py
tours/: admin.py  forms.py  models.py  utils.py  views.py
tours/migrations/: 0001_initial.py  0002_rename_bike_routes_bike_route_and_more.py  0003_tour_tour_date.py  0004_rename_bike_route_bikeroute_alter_tour_tour_date.py  0005_alter_tour_tour_bookings_alter_tour_tour_routes.py  0006_tour_user_alter_bikeroute_user_alter_booking_user.py  0007_alter_tour_tour_bookings_alter_tour_tour_routes_and_more.py  0008_alter_tour_tour_bookings.py  0009_forum.py  0010_alter_forum_post_alter_forum_time_posted.py  0011_alter_forum_post.py  0012_alter_forum_time_posted.py  0013_alter_forum_poster_alter_forum_time_posted.py  0014_alter_forum_time_posted_reply.py  0015_alter_forum_time_posted.py  0016_reply_time_posted.py  0017_alter_booking_user_alter_gallery_user_and_more.py
tours/static/: script.js  style.css
tours/templates/: base.html  bikeroutes.html  bookings.html  forum.html  gallery.html  homepage.html  post.html  profile.html  tours.html
tours/templates/forms/: booking_form.html  gallery_form.html  route_form.html  tour_form.html
user_login/: urls.py  views.py
user_login/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  signup.html
