[project]
name = "tt-rewrite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "django-jazzmin>=3.0.4",
    "environ>=1.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
]
prod = [
    "gunicorn>=25.1.0",
]
